@@ -26,6 +26,7 @@ tractags-0.7 (not yet released)
    mitigated by
    * mirroring ticket tags into normalized `tags` db table
    * caching `get_tagged_resources` for tickets
+   * optionally skipping fine-grained view permission tests for tickets
  * #4996: TagsPlugin fails on upgrading
  * #5345: TracError: The Trac Environment needs to be upgraded
  * #5575: UnicodeEncodeError on Japanese tag
